Converts Build Script to PowerShell
In a push to automate project builds, this changes the build script from a BAT script to a PowerShell script. This is a cross-platform solution that should help us build the project within the mcr.microsoft.com/dotnet/sdk:6.0 docker image (Debian).

Also updates the README to list PowerShell 7 as a dependency as the pwsh tool is not available in Windows PowerShell (v5).

--- a/project/Aki.Build/Aki.Build.csproj
+++ b/project/Aki.Build/Aki.Build.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    </PropertyGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Exec Command="dotnet publish ..\Aki.Launcher\Aki.Launcher.csproj -c Release -f net6.0 -r win-x64 /p:IncludeNativeLibrariesForSelfExtract=true -p:PublishSingleFile=true --self-contained false"/>
-      <Exec Command="../build.bat" WorkingDirectory="$(ProjectDir)" />
+        <Exec Command="dotnet publish ..\Aki.Launcher\Aki.Launcher.csproj -c Release -f net6.0 -r win-x64 /p:IncludeNativeLibrariesForSelfExtract=true -p:PublishSingleFile=true --self-contained false"/>
+        <Exec Command="pwsh -NoProfile -ExecutionPolicy Bypass ../build.ps1" WorkingDirectory="$(ProjectDir)" />
     </Target>
 
 </Project>
