--- a/project/.editorconfig
+++ b/project/.editorconfig
@@ -28,6 +28,7 @@ csharp_new_line_before_members_in_object_initializers = true
 csharp_new_line_before_members_in_anonymous_types = true
 csharp_new_line_between_query_expression_clauses = true
 csharp_style_namespace_declarations = file_scoped:warning
+max_line_length = 140
 
 # Indentation preferences
 csharp_indent_block_contents = true
