--- a/project/SPTarkov.Core/SPTarkov.Core.csproj
+++ b/project/SPTarkov.Core/SPTarkov.Core.csproj
@@ -8,6 +8,7 @@
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
