--- a/project/SPTarkov.Core/SPTarkov.Core.csproj
+++ b/project/SPTarkov.Core/SPTarkov.Core.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
