--- a/project/SPTarkov.Core/SPTarkov.Core.csproj
+++ b/project/SPTarkov.Core/SPTarkov.Core.csproj
@@ -13,17 +13,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MudBlazor" Version="8.13.0" />
+    <PackageReference Include="MudBlazor" Version="8.14.0" />
     <PackageReference Include="Photino.Blazor" Version="4.0.13"/>
     <PackageReference Include="SharpHDiffPatch.Core" Version="2.3.4" />
+    <!-- Used the same as the installer does -->
+    <PackageReference Include="Squid-Box.SevenZipSharp" Version="1.6.2.24" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Update version number when needed -->
-    <Content Include="$(NuGetPackageRoot)mudblazor\8.13.0\staticwebassets\MudBlazor.min.css">
+    <Content Include="$(NuGetPackageRoot)mudblazor\8.14.0\staticwebassets\MudBlazor.min.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="$(NuGetPackageRoot)mudblazor\8.13.0\staticwebassets\MudBlazor.min.js">
+    <Content Include="$(NuGetPackageRoot)mudblazor\8.14.0\staticwebassets\MudBlazor.min.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -31,6 +33,9 @@
   <ItemGroup>
     <Reference Include="zlib.net">
       <HintPath>SharedDependencies\zlib.net.dll</HintPath>
+    </Reference>
+    <Reference Include="7z">
+      <HintPath>SPT_Data\Launcher\Dependecy\7z.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
