--- a/project/SPTarkov.Core/SPTarkov.Core.csproj
+++ b/project/SPTarkov.Core/SPTarkov.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="SharpHDiffPatch.Core" Version="2.3.4" />
     <!-- Used the same as the installer does -->
     <PackageReference Include="Squid-Box.SevenZipSharp" Version="1.6.2.24" />
+    <PackageReference Include="SemanticVersioning" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
